Moved tooltip out of the titlebar so that it can be closed from the dialog: 	- modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.js: 		- Replaced template helpToolTip with helpToolTipTrigger 		- Moved the tooltip itself into template panelOuter: the ui div now 		  contains ui-inner and the tooltip 		- Updated loadForm() to put the form in ui-inner, separate the tooltip 		  setup from the tooltip trigger setup, and replace the standard link for 		  Learn More with a click event to get around the dialog bug preventing that 		  link from working as expected 		- Removed the tooltip events from openAsModal() 		- Updated openAsModal() and closeAsModal() to make sure the tooltip 		  gets hidden when switching between modes 	- modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.css: 		- The tooltip and its trigger now have separate wrap classes 		- Updated positioning to put the tooltip back where it belongs 		  visually, even though it's in a totally different place in the markup

--- a/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.css
+++ b/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.css
@@ -469,7 +469,6 @@
 	font-weight: bold;
 }
 .articleFeedbackv5-tooltip-wrap {
-	float: right;
 	position: relative;
 }
 .articleFeedbackv5-tooltip-wrap:after {
@@ -478,7 +477,7 @@
 .articleFeedbackv5-tooltip {
 	position: absolute;
 	z-index: 15;
-	top: -160px;
+	top: -450px;
 	right: -105px;
 	font-size: 12px;
 	width: 234px;
@@ -518,6 +517,13 @@
 	height: 26px;
 }
 
+.articleFeedbackv5-tooltip-trigger-wrap {
+	float: right;
+	position: relative;
+}
+.articleFeedbackv5-tooltip-trigger-wrap:after {
+	clear: both;
+}
 .articleFeedbackv5-tooltip-trigger {
 	display: block;
 	float: left;
@@ -796,6 +802,15 @@ body .ui-widget-overlay {
 	margin-bottom: 0;
 	padding-top: .5em;
 	padding-bottom: .17em;
+}
+
+.articleFeedbackv5-dialog.ui-dialog .articleFeedbackv5-tooltip-wrap {
+	position: static;
+}
+
+.articleFeedbackv5-dialog.ui-dialog .articleFeedbackv5-tooltip {
+	top: -195px;
+	right: -53px;
 }
 
 body .ui-dialog .ui-icon-closethick {
